--- a/src/common/mixins/browser-specific.scss
+++ b/src/common/mixins/browser-specific.scss
@@ -21,6 +21,15 @@
           box-sizing: $value;
 }
 
+@mixin user-select($value) {
+  -webkit-user-select: $value;
+   -khtml-user-selectg: $value;
+     -moz-user-select: $value;
+      -ms-user-select: $value;
+       -o-user-select: $value;
+          user-select: $value;
+}
+
 @mixin animation($value...) {
   -webkit-animation: $value;
    -khtml-animation: $value;
